--- a/Explore/app/src/main/res/layout/content_main.xml
+++ b/Explore/app/src/main/res/layout/content_main.xml
@@ -5,16 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.khachik.explore.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:context="com.khachik.explore.Activities.MainActivity"
+    tools:showIn="@layout/app_bar_main"
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    >
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/contentFragment"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1" />
 
 </android.support.constraint.ConstraintLayout>
