--- a/Explore/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Explore/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,17 +3,21 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/user_profile"
+            android:icon="@drawable/my_profile"
+            android:title="My profile" />
+        <item
+            android:id="@+id/nav_scan"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="Scan" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Gallery" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_favorites"
+            android:icon="@drawable/favorites"
+            android:title="favorites" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
