--- a/Explore/app/src/main/res/values/dimens.xml
+++ b/Explore/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_margin">18dp</dimen>
+    <dimen name="logo_text_size">28dp</dimen>
 </resources>
