--- a/Explore/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Explore/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,9 +3,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/user_profile"
-            android:icon="@drawable/my_profile"
-            android:title="My profile" />
+            android:id="@+id/home"
+            android:icon="@drawable/ic_home"
+            android:title="Home" />
         <item
             android:id="@+id/nav_scan"
             android:icon="@drawable/ic_menu_camera"
