--- a/Explore/app/src/main/res/layout/activity_article.xml
+++ b/Explore/app/src/main/res/layout/activity_article.xml
@@ -71,7 +71,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/profile_username"
+                    android:id="@+id/title"
                     android:layout_gravity="center"
                     android:padding="12dp"
                     android:textSize="25sp"
