--- a/Explore/app/src/main/res/layout/activity_article.xml
+++ b/Explore/app/src/main/res/layout/activity_article.xml
@@ -37,13 +37,6 @@
                 android:title="@string/app_name"
                 app:layout_collapseMode="pin"
                 />
-            <ImageView
-                android:id="@+id/edit_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_change_image"
-                android:padding="10dp"
-                android:layout_gravity="top|right"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -81,42 +74,39 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:padding="12dp"
+                <TextView
+                    android:id="@+id/country"
+                    android:layout_gravity="center"
+                    android:paddingBottom="15dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimaryText"
+                    android:text="@string/date"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:contentDescription="@string/app_name"
-                        android:src="@drawable/ic_email"
-                        android:layout_gravity="center|center_horizontal"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:id="@+id/profile_email"
-                        android:layout_gravity="center"
-                        android:padding="6dp"
-                        android:textSize="16sp"
-                        android:textStyle="italic"
-                        android:textColor="@color/colorPrimaryText"
-                        android:layout_width="0dp"
-                        android:layout_weight="9"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
+                    android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/profile_age"
+                    android:id="@+id/city"
+                    android:layout_gravity="center"
+                    android:paddingBottom="15dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimaryText"
+                    android:text="@string/date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/building_date"
                     android:layout_gravity="center"
                     android:paddingBottom="15dp"
                     android:layout_marginLeft="10dp"
                     android:textSize="16sp"
                     android:textStyle="italic"
                     android:textColor="@color/colorPrimaryText"
-                    android:text="@string/age_"
+                    android:text="@string/date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
@@ -134,6 +124,21 @@
                     android:background="@drawable/edit_text"
                     android:backgroundTint="@color/colorPrimary"
                     android:textSize="15sp"/>
+
+
+                <TextView
+                    android:id="@+id/content"
+                    android:layout_gravity="center"
+                    android:paddingVertical="15dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="16sp"
+                    android:textStyle="italic"
+                    android:textColor="@color/colorPrimaryText"
+                    android:text="@string/date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
 
@@ -141,15 +146,5 @@
 
     </android.support.v4.widget.NestedScrollView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floating_avatar"
-        android:scaleType="center"
-        android:layout_width="205px"
-        android:layout_height="205dp"
-        app:elevation="6dp"
-        app:pressedTranslationZ="12dp"
-        app:backgroundTint="@color/colorAccent"
-        app:layout_anchor="@id/app_bar_layout"
-        app:layout_anchorGravity="bottom|center_horizontal"
-        android:visibility="visible" />
+
 </android.support.design.widget.CoordinatorLayout>
