--- a/Explore/app/src/main/res/layout/artycles_card.xml
+++ b/Explore/app/src/main/res/layout/artycles_card.xml
@@ -19,6 +19,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:src="@drawable/ic_image_load"
             android:id="@+id/artycle_image"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
