--- a/Explore/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Explore/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,6 +15,10 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="Gallery" />
         <item
+            android:id="@+id/nav_search"
+            android:icon="@drawable/ic_search_black_24dp"
+            android:title="Search" />
+        <item
             android:id="@+id/nav_favorites"
             android:icon="@drawable/favorites"
             android:title="favorites" />
@@ -23,18 +27,5 @@
             android:icon="@drawable/ic_menu_manage"
             android:title="Tools" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
 
 </menu>
