Added some changesto the progect.
* Added google map
* Created gallery activity
* Added functionality to have favorits

--- a/Explore/app/src/main/res/layout/app_bar_main.xml
+++ b/Explore/app/src/main/res/layout/app_bar_main.xml
@@ -22,12 +22,16 @@
 
     <include layout="@layout/content_main" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_scan" />
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:backgroundTint="#d5d4d6"-->
+        <!--android:layout_gravity="bottom|end"-->
+        <!--android:layout_margin="@dimen/fab_margin"-->
+        <!--app:srcCompat="@drawable/scanner_icon"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--/>-->
 
 </android.support.design.widget.CoordinatorLayout>
