--- a/Explore/app/src/main/res/layout/activity_article.xml
+++ b/Explore/app/src/main/res/layout/activity_article.xml
@@ -76,11 +76,15 @@
                     android:layout_gravity="center"
                     android:padding="12dp"
                     android:textSize="25sp"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="50dp"
+                    android:layout_marginRight="10dp"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimaryText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+
+
 
                 <TextView
                     android:id="@+id/country"
@@ -164,5 +168,15 @@
 
     </android.support.v4.widget.NestedScrollView>
 
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floating_favorit"
+        android:src="@drawable/ic_heart"
+        android:scaleType="center"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginRight="10dp"
+        app:backgroundTint="@color/colorWhite"
+        app:layout_anchor="@id/app_bar_layout"
+        app:layout_anchorGravity="bottom|right"
+        android:visibility="visible" />
 </android.support.design.widget.CoordinatorLayout>
