--- a/Explore/app/src/main/res/layout/artycles_card.xml
+++ b/Explore/app/src/main/res/layout/artycles_card.xml
@@ -10,46 +10,53 @@
     app:cardElevation="0dp"
     app:cardBackgroundColor="#f7f7f9"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        >
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:padding="16dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/artycle_image"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/ic_image_load"
-            android:id="@+id/artycle_image"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginRight="24dp"
             android:layout_marginTop="8dp"
-            />
+            android:src="@drawable/ic_image_load" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/artycle_title"
-            android:layout_toRightOf="@+id/artycle_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
+            android:layout_marginRight="30dp"
+            android:layout_toRightOf="@+id/artycle_image"
             android:textSize="18sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/artycle_city"
-            android:layout_toRightOf="@+id/artycle_image"
-            android:layout_below="@+id/artycle_title"
-            />
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/artycle_title"
+            android:layout_toRightOf="@+id/artycle_image" />
+
+        <TextView
             android:id="@+id/artycle_country"
-            android:layout_toRightOf="@+id/artycle_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/artycle_city"
-            />
+            android:layout_toRightOf="@+id/artycle_image" />
+
+        <ImageView
+            android:id="@+id/favorite"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/ic_heart" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
