--- a/Explore/app/src/main/res/layout/fragment_home.xml
+++ b/Explore/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <android.support.design.widget.CoordinatorLayout
-    android:id="@+id/coordinatorlayout"
+    android:id="@+id/home_fragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -11,4 +11,15 @@
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:backgroundTint="#d5d4d6"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/scanner_icon"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        />
 </android.support.design.widget.CoordinatorLayout>
