--- a/Explore/app/src/main/res/layout/fragment_favorites.xml
+++ b/Explore/app/src/main/res/layout/fragment_favorites.xml
@@ -1,14 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/fragment_favorites"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FavoritesFragment">
+    android:layout_height="match_parent">
 
-    <com.google.android.gms.plus.PlusOneButton xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
-        android:id="@+id/plus_one_button"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/favorites_recyclerview"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        plus:annotation="inline"
-        plus:size="standard" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
